Added bbn content

--- a/_posts/2019-10-03-bbn.md
+++ b/_posts/2019-10-03-bbn.md
@@ -3,12 +3,35 @@ layout: post
 title: Big Bang Nucleosynthesis
 date: 2019-10-03 00:00:00
 description: The synthesis of light elements in the early universe is a complex process, and provides much insight into the thermodynamic state of each particle species that is present.
-img: bbn.png # Add image post (optional)
+img: bbntitle.jpg # Add image post (optional)
 fig-caption: # Add figcaption (optional)
 tags: [Big Bang Nucleosynthesis, Dark Matter]
 ---
 
 
-The synthesis of light elements in the early universe is a complex process, and provides much insight into the thermodynamic state of each particle species that is present. The agreement between precise measurements of the light element abundances such as Hydrogen, Helium and Lithium provides strong evidence for a Hot Big Bang. Nonetheless, it is known that new physics is required both in the Standard models of particle physics and cosmology. The precision of these light element abundances can place tight constraints on the type of new physics that can be at play. To derive these constraints, a solid understanding of the physics underlying BBN is required.
+The synthesis of light elements in the early universe is a complex process, and provides much insight into the thermodynamic state of each particle species that is present. The agreement between precise measurements of the light element abundances such as Hydrogen, Helium and Lithium provides strong evidence for a Hot Big Bang. Nonetheless, it is known that new physics is required both in the Standard models of particle physics and cosmology. The precision of these light element abundances can place tight constraints on the type of new physics that can be at play.
+
+This post is based on two articles written in October 2019 with colleagues at King's College London. Links to the webpages and PDF documents can be found below. Also included is a link to a presentation given by myself at the recent DMUK meeting at the University of Manchester.
+
+* <a href="https://arxiv.org/pdf/1910.01649.pdf" target="blank_"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a> 
+
+* <a href="http://inspirehep.net/record/1757525" target="blank_"><i class="fa fa-external-link" aria-hidden="true"></i> Inspire-HEP Record</a>
+
+* <a href="{{site.baseurl}}/assets/pdf/DMUK.pdf" target="blank_"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> DMUK Presentation</a>
+
+## What happens in the Standard Model?
+
+Within the Standard Model, Big Bang Nucleosynthesis has only one free parameter, the baryon-to-photon ratio $$\eta$$ or equivalently the baryon density $$\Omega_{\mathrm{b}}h^2$$. The dependence of the key primordial abundances is shown below;
+
+![bbnsm]({{site.baseurl}}/assets/img/bbn.png)
+
+Here, the blue band represents the best measurement of the baryon density from the Planck satellite. Besides the lithium abundance, which is a far from solved theoretical problem, there is very strong agreement between nuclear physics predictions within the Standard Models of Particle Physics and Cosmology and measurements. This ensures that new physics, be it in the form of new particles, or varying constants, cannot alter this picture too much.
+
+In the works linked above we consider two ways in which new physics might be manifest:
+
+1. A new particle species that is thermally coupled to the Standard Model plasma at the time of nucleosynthesis.
+2. The prospect that Newton's gravitational constant might vary with cosmic time.
+
+In both cases we find that we can derive some strict bounds on either the mass of the new particle, or the variation of $$G$$.
 
 <a href="{{site.baseurl}}/"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
