Added content to boosted DM post

--- a/_posts/2019-10-03-bbn.md
+++ b/_posts/2019-10-03-bbn.md
@@ -9,7 +9,7 @@ tags: [Big Bang Nucleosynthesis, Dark Matter]
 ---
 
 
-The synthesis of light elements in the early universe is a complex process, and provides much insight into the thermodynamic state of each particle species that is present. The agreement between precise measurements of the light element abundances such as Hydrogen, Helium and Lithium provides strong evidence for a Hot Big Bang. Nonetheless, it is known that new physics is required both in the Standard models of particle physics and cosmology. The precision of these light element abundances can place tight constraints on the type of new physics that can be at play.
+> The synthesis of light elements in the early universe is a complex process, and provides much insight into the thermodynamic state of each particle species that is present. The agreement between precise measurements of the light element abundances such as Hydrogen, Helium and Lithium provides strong evidence for a Hot Big Bang. Nonetheless, it is known that new physics is required both in the Standard models of particle physics and cosmology. The precision of these light element abundances can place tight constraints on the type of new physics that can be at play.
 
 This post is based on two articles written in October 2019 with colleagues at King's College London. Links to the webpages and PDF documents can be found below. Also included is a link to a presentation given by myself at the recent DMUK meeting at the University of Manchester.
 
