Added homepage and code background colour

--- a/_posts/2019-11-12-cmbgraph.md
+++ b/_posts/2019-11-12-cmbgraph.md
@@ -25,3 +25,5 @@ To do so, we'll consider three basic structures and architectures:
 * **[A2]** A more complicated convolutional neural network acting on the true pixel map - we expect this to perform better as it has spatial information naturally encoded into the data format.
 
 * **[A3]** Finally, we will look at encoding the CMB as a graph (in the mathematical sense) with the power spectrum encoded in the edges. We expect this will be the most robust to any deletions and reorderings.
+
+<a href="{{site.baseurl}}/"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
