--- a/_posts/2019-08-20-mcmc.md
+++ b/_posts/2019-08-20-mcmc.md
@@ -415,4 +415,6 @@ We could also have run with a normally distributed prior on the mean giving,
 
 We see that the choice of prior makes some difference, but the resulting posterior distribution is still in the correct region.
 
+The explanation above is based on a great article by [Jermey Kun](https://jeremykun.com/2015/04/06/markov-chain-monte-carlo-without-all-the-bullshit/).
+
 <a href="{{site.baseurl}}/"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
